--- a/Terrain/imgui.ini
+++ b/Terrain/imgui.ini
@@ -3,6 +3,10 @@ Pos=60,60
 Size=400,400
 
 [Window][Render time]
-Pos=12,26
+Pos=12,17
 Size=211,184
+
+[Window][GPU Rendering Time]
+Pos=60,60
+Size=205,99
 
