instanced lod and benchmarking

--- a/Terrain/imgui.ini
+++ b/Terrain/imgui.ini
@@ -10,3 +10,11 @@ Size=211,184
 Pos=60,60
 Size=205,99
 
+[Window][GPU Time]
+Pos=60,60
+Size=205,99
+
+[Window][CPU Time]
+Pos=288,61
+Size=233,164
+
