--- a/Terrain/imgui.ini
+++ b/Terrain/imgui.ini
@@ -11,14 +11,42 @@ Pos=60,60
 Size=205,99
 
 [Window][GPU Time]
-Pos=60,60
+Pos=763,10
 Size=205,99
 
 [Window][CPU Time]
-Pos=288,61
+Pos=521,11
 Size=233,188
 
 [Window][Controls]
-Pos=558,58
-Size=167,188
+Pos=1309,74
+Size=328,504
+
+[Window][Profiler]
+Pos=443,128
+Size=658,267
+
+[Window][Dear ImGui Demo]
+Pos=650,20
+Size=550,680
+
+[Window][AA]
+Pos=612,98
+Size=616,684
+
+[Window][GPUProfiler]
+Pos=579,119
+Size=527,181
+
+[Window][asdas]
+Pos=787,271
+Size=263,177
+
+[Window][Profilers]
+Pos=10,10
+Size=400,77
+
+[Window][Terrain Generation]
+Pos=1090,10
+Size=500,316
 
