Normals compute shader

--- a/Terrain/imgui.ini
+++ b/Terrain/imgui.ini
@@ -44,9 +44,13 @@ Size=263,177
 
 [Window][Profilers]
 Pos=10,10
-Size=400,77
+Size=400,385
 
 [Window][Terrain Generation]
-Pos=1090,10
-Size=500,316
+Pos=1290,10
+Size=300,682
+
+[Window][Profilers AMD Radeon(TM) Graphics]
+Pos=10,10
+Size=400,77
 
