--- a/Terrain/imgui.ini
+++ b/Terrain/imgui.ini
@@ -48,13 +48,17 @@ Size=400,385
 
 [Window][Terrain Generation]
 Pos=1290,10
-Size=300,682
+Size=300,77
 
 [Window][Profilers AMD Radeon(TM) Graphics]
 Pos=10,10
 Size=400,77
 
 [Window][Vulkan Profilers AMD Radeon(TM) Graphics]
+Pos=10,10
+Size=400,77
+
+[Window][Vulkan Profilers AMD Radeon RX 6600]
 Pos=10,10
 Size=400,77
 
