Quad trees, preparation for sinking lod

--- a/Terrain/imgui.ini
+++ b/Terrain/imgui.ini
@@ -62,3 +62,11 @@ Size=400,77
 Pos=10,10
 Size=400,77
 
+[Window][Indirection textures]
+Pos=428,-5
+Size=133,137
+
+[Window][quadtree]
+Pos=422,11
+Size=350,351
+
