multithreaded virtual texture streaming

--- a/Terrain/imgui.ini
+++ b/Terrain/imgui.ini
@@ -48,7 +48,7 @@ Size=400,385
 
 [Window][Terrain Generation]
 Pos=1290,10
-Size=300,100
+Size=300,35
 
 [Window][Profilers AMD Radeon(TM) Graphics]
 Pos=10,10
@@ -56,7 +56,7 @@ Size=400,77
 
 [Window][Vulkan Profilers AMD Radeon(TM) Graphics]
 Pos=10,10
-Size=400,77
+Size=400,35
 
 [Window][Vulkan Profilers AMD Radeon RX 6600]
 Pos=10,10
@@ -69,4 +69,8 @@ Size=133,137
 [Window][quadtree]
 Pos=422,11
 Size=350,351
+
+[Window][VirtualHeightMapDebug]
+Pos=422,13
+Size=576,613
 
