Separate virtual map classes, prepare for indirection texture, optimize fragment shader
Preparing for creating indirection texture using compute shaders.
Optimizing fragment shader by reducing number of functions

--- a/Terrain/imgui.ini
+++ b/Terrain/imgui.ini
@@ -56,7 +56,7 @@ Size=400,77
 
 [Window][Vulkan Profilers AMD Radeon(TM) Graphics]
 Pos=10,10
-Size=400,35
+Size=400,385
 
 [Window][Vulkan Profilers AMD Radeon RX 6600]
 Pos=10,10
@@ -73,4 +73,5 @@ Size=350,351
 [Window][VirtualHeightMapDebug]
 Pos=422,13
 Size=541,554
+Collapsed=1
 
