Updating indirection mips

--- a/Terrain/imgui.ini
+++ b/Terrain/imgui.ini
@@ -48,7 +48,7 @@ Size=400,385
 
 [Window][Terrain Generation]
 Pos=1290,10
-Size=300,123
+Size=300,284
 
 [Window][Profilers AMD Radeon(TM) Graphics]
 Pos=10,10
@@ -73,4 +73,5 @@ Size=350,351
 [Window][VirtualHeightMapDebug]
 Pos=424,13
 Size=541,554
+Collapsed=1
 
