--- a/Terrain/imgui.ini
+++ b/Terrain/imgui.ini
@@ -49,6 +49,7 @@ Size=400,385
 [Window][Terrain Generation]
 Pos=1290,10
 Size=300,77
+Collapsed=1
 
 [Window][Profilers AMD Radeon(TM) Graphics]
 Pos=10,10
@@ -94,6 +95,7 @@ Size=407,145
 [Window][Renderer Metrics: AMD Radeon(TM) Graphics]
 Pos=480,10
 Size=560,160
+Collapsed=1
 
 [Window][Renderer Metrics: AMD Radeon RX 6600]
 Pos=480,10
